--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,8 @@
 version: "3"
+networks:
+  magistrala-base-net:
+    name: magistrala-base-net
+    driver: bridge
 
 services:
   chirpstack:
@@ -16,8 +20,10 @@ services:
       - MQTT_BROKER_HOST=mosquitto
       - REDIS_HOST=redis
       - POSTGRESQL_HOST=postgres
+    networks:
+      - magistrala-base-net
     ports:
-      - 8080:8080
+      - 8088:8080
 
   chirpstack-gateway-bridge:
     image: chirpstack/chirpstack-gateway-bridge:4
@@ -30,17 +36,21 @@ services:
       - INTEGRATION__MQTT__EVENT_TOPIC_TEMPLATE=eu868/gateway/{{ .GatewayID }}/event/{{ .EventType }}
       - INTEGRATION__MQTT__STATE_TOPIC_TEMPLATE=eu868/gateway/{{ .GatewayID }}/state/{{ .StateType }}
       - INTEGRATION__MQTT__COMMAND_TOPIC_TEMPLATE=eu868/gateway/{{ .GatewayID }}/command/#
+    networks:
+      - magistrala-base-net
     depends_on:
       - mosquitto
   
   chirpstack-gateway-bridge-basicstation:
     image: chirpstack/chirpstack-gateway-bridge:4
     restart: unless-stopped
-    command: -c /etc/chirpstack-gateway-bridge/chirpstack-gateway-bridge-basicstation-eu868.toml
+    command: -c /etc/chirpstack-gateway-bridge/chirpstack-gateway-bridge-basicstation-in865.toml
     ports:
       - 3001:3001
     volumes:
       - ./configuration/chirpstack-gateway-bridge:/etc/chirpstack-gateway-bridge
+    networks:
+      - magistrala-base-net
     depends_on:
       - mosquitto
 
@@ -50,6 +60,8 @@ services:
     command: --server chirpstack:8080 --bind 0.0.0.0:8090 --insecure
     ports:
       - 8090:8090
+    networks:
+      - magistrala-base-net
     depends_on:
       - chirpstack
 
@@ -59,6 +71,8 @@ services:
     volumes:
       - ./configuration/postgresql/initdb:/docker-entrypoint-initdb.d
       - postgresqldata:/var/lib/postgresql/data
+    networks:
+      - magistrala-base-net
     environment:
       - POSTGRES_PASSWORD=root
 
@@ -66,12 +80,16 @@ services:
     image: redis:7-alpine
     restart: unless-stopped
     command: redis-server --save 300 1 --save 60 100 --appendonly no
+    networks:
+      - magistrala-base-net
     volumes:
       - redisdata:/data
 
   mosquitto:
     image: eclipse-mosquitto:2
     restart: unless-stopped
+    networks:
+      - magistrala-base-net
     ports:
       - 1883:1883
     volumes: 
@@ -80,3 +98,4 @@ services:
 volumes:
   postgresqldata:
   redisdata:
+
